--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "1.1.7",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-slot": "1.2.0",
     "@radix-ui/react-tooltip": "1.2.4",
     "class-variance-authority": "0.7.1",
@@ -21,7 +22,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "3.2.0",
-    "tw-animate-css": "1.2.7"
+    "tw-animate-css": "1.2.7",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
