--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "1.1.7",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-slot": "1.2.0",
     "@radix-ui/react-tooltip": "1.2.4",
     "class-variance-authority": "0.7.1",
@@ -23,17 +25,24 @@
     "react-dom": "19.0.0",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.2.7",
-    "vaul": "^1.1.2"
+    "vaul": "1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
     "@tailwindcss/postcss": "4.1.4",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@types/jest": "29.5.14",
     "@types/node": "22.14.1",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "eslint": "9.25.0",
     "eslint-config-next": "15.3.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "30.0.0-beta.3",
     "tailwindcss": "4.1.4",
+    "ts-node": "10.9.2",
     "typescript": "5.8.3"
   }
 }
