--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@prisma/client": "5.6.0",
     "@radix-ui/react-avatar": "1.1.7",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-slot": "1.2.0",
