--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-auth": "5.0.0-beta.26",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "server-only": "0.0.1",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.2.7",
     "vaul": "1.1.2"
