--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@neondatabase/serverless": "1.0.0",
     "@prisma/client": "5.6.0",
     "@radix-ui/react-avatar": "1.1.7",
     "@radix-ui/react-dialog": "1.1.14",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "1.2.0",
     "@radix-ui/react-tooltip": "1.2.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
