--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@neondatabase/serverless": "1.0.0",
     "@prisma/client": "5.6.0",
+    "@radix-ui/react-alert-dialog": "1.1.14",
     "@radix-ui/react-avatar": "1.1.7",
     "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-select": "2.2.5",
     "@radix-ui/react-slot": "1.2.0",
     "@radix-ui/react-tooltip": "1.2.4",
     "class-variance-authority": "0.7.1",
