--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:jest": "jest --watch",
+    "test:jest": "jest --watch"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "1.1.14",
